# AI-agent

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
agent/: __init__.py  agent.py  config.py  llm_client.py  memory.py  run.py  safety.py  tools.py
tests/: conftest.py  test_agent_routing.py  test_memory.py  test_safety_terminal.py  test_safety_url.py  test_tools_crypto.py  test_tools_fs.py  test_tools_http.py  test_tools_weather.py
