[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-ai-agent"
version = "0.1.0"
description = "Локальный CLI AI-агент с OpenAI и LangChain"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "AI Agent Team"}]
keywords = ["ai", "agent", "cli", "langchain", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
